k8s/base/infra/kafka/kafka-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-ui
spec:
  selector:
    app: kafka-ui
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
